implement plugin persistence in daemon mode
